# sphinx

./: CMakeLists.txt  LICENSE  README.md
src/: chat_ui.cc  chat_ui.h  config.py  main.cc  main.py  main_window.cc  main_window.h
src/ai/: oa_chat_gpt.py  oa_image_generation.py  oa_whisper.py
src/audios/: data_vally.m4a
src/interface/: chat_gpt.py  main_window.py  sphinx_widgets.py
